# Novalang

./: .gitignore  BUILD_README.md  CMakeLists.txt  README.md  grammar.txt  syntax_and_plan.nova  usage.txt
examples/: async.nv  calculate_pi.nv  control_flow.nova  demo.nv  deprecated.nv  fstring.nv  input.nv  io.nv  menu.nv  nova_stresstest.nv  novalang_demo.nova  test_async.nv  test_std.nv  type_manipulation.nv
examples/booleans/: conditionals.nova
examples/builtins/: test_conversion_error.nova  test_input.nova  test_input_std.nv  test_input_to_int.nova  test_matrix_push.nova  test_println.nova  test_removeAt.nova
examples/funcs/: test_functions.nova  test_global.nova  test_scoping.nova  test_scoping2.nova  test_scoping3.nova
examples/imports/: test_import.nova  test_local_import.nova  test_math_import.nova
examples/lists/: test_break.nova  test_complete.nova  test_continue.nova  test_for_loop.nova  test_forin.nova  test_len.nova  test_lists.nova  test_lists2.nova  test_lists3.nova  test_lists4.nova  test_nested.nova  test_nested2.nova  test_nested3.nova  test_none.nova  test_pop.nova  test_push.nova  test_user_example.nova
examples/types/: test_float_int.nova  test_struct.nova  test_type_check_pass.nova  type_struct_func.nova  type_struct_return.nova
include/: ast.h  ast_printer.h  compiler.h  disassembler.h  interpreter.h  keywords.h  lexer.h  parser.h  token.h  vm.h
src/: ast_printer.cpp  compiler.cpp  disassembler.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  vm.cpp
standardlib/: input.nv  lists.nv  math.nv  strings.nv
(+3 files in other folders)
